# agent-apps

./: .dockerignore  .gitignore  Dockerfile.apps  PITCH.md  PITCH.pptx  README.md  _md_to_pptx.py  app_contribution_guidelines.md  cuga_app_builder_spec.md  docker-compose.yml  package-lock.json  requirements.apps.txt  requirements.txt  start.sh
apps/: .env  .env.example  _llm.py  launch.py
apps/api_doc_gen/: README.md  main.py  ui.py
apps/arch_diagram/: README.md  main.py
apps/box_qa/: README.md  main.py  ui.py
apps/code_reviewer/: README.md  main.py  requirements.txt
apps/deck_forge/: README.md  main.py
apps/drop_summarizer/: README.md  main.py  requirements.txt
apps/hiking_research/: README.md  main.py
apps/ibm_cloud_advisor/: main.py
apps/ibm_docs_qa/: main.py
apps/ibm_whats_new/: README.md  main.py
apps/movie_recommender/: README.md  main.py
apps/newsletter/: README.md  feeds.py  main.py  requirements.txt
apps/paper_scout/: README.md  main.py  requirements.txt
apps/server_monitor/: README.md  main.py  requirements.txt
apps/smart_todo/: README.md  main.py  requirements.txt  store.py
apps/stock_alert/: ARCHITECTURE.md  (+4 more)
apps/travel_planner/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
apps/travel_planner/static/: index.html
apps/travel_planner/travel_planner.egg-info/: PKG-INFO  SOURCES.txt
cuga-apps/: .dockerignore  Dockerfile.apps  Dockerfile.mcp  deploy_apps.sh  docker-compose.yml  start.sh  unified_experience.md
docs/: docker.md
ui/: .dockerignore  README.md  index.html  package-lock.json  package.json
(+87 files in other folders)
